@@ -1,3 +1,8 @@
+2018-03-02  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/81812
+	* g++.dg/torture/pr81812.C: New.
+
 2018-03-02  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/84171
